Correct from toList() to collect(Collectors.toList()) on ManageRecurringEventView.java for GWT compatibility